--- a/dbrowser.html
+++ b/dbrowser.html
@@ -261,7 +261,7 @@
                 </div>
                 <h1 class="display-4 text-white font-alt-1 text-center mt-2">Experience The Open Web.</h1>
                 <p class="description" style="color: #fff;">dBrowser is a web browser for Linux, MacOS, and Windows that allows users to browse and develop upon the decentralized web (dweb://).</p>
-                <div class="text-center"><a href="https://github.com/dbrowser/dbrowser/releases" class="btn btn-lg btn-white" id='os_download' target="_blank">Download for OS</a></div>
+               <div class="text-center"><a href="#" class="btn btn-lg btn-white" id='' target="_blank">Coming Soon</a></div>  <!-- keep id="os_download" for downloading -->
                 <a href="#browse-the-dweb"><i class="material-icons d-block down-arrow arrow bounce">keyboard_arrow_down</i></a>
               </div>
         </div>
