--- a/peeps-story.html
+++ b/peeps-story.html
@@ -273,7 +273,7 @@
                 The Peeps Story.
             </h1>
             <p class="lead mb-0 text-white">
-                Peeps is the first tech startup launched from a prison and is doing more to empower people than any other tech company in the world. This is our story.
+              When we first started writing this, the plan was to share our side of the story that the media refused to write, our fight for freedom, or talk about the struggles of having to build all of this from a jail cell but the past is the antithesis of what Peeps represents. Whether it's a new web for the people or the Peeps movement itself, our story is centered around rebirths, second chances and comeback stories.
             </p>
           </div>
         </div>
@@ -319,10 +319,20 @@
         <div class="row justify-content-center">
           <div class="col-xl-8 col-lg-9">
             <article>
-              <h3>Launching 08/24/20</h3>.
+              <!-- <h3>Launching 08/24/20</h3>. -->
               <!-- <p>
                 Peeps is the creation of Jared Rice Sr., and has a story like no other tech company in existence. It is important for one to understand why this vision was created, where it came to fruition and how Peeps would finally arise from the ashes.
               </p> -->
+              <p>Second chances. Not everyone believes in them. Some people feel that when you make a mistake or blunder, you're written off completely, never to be thought of again. For these types of people, life's just easier that way. They don't have to worry about big ideas or thinking outside the box. They don't have to worry about change or new ways of doing things. They're the status quo, risk averse, head-in-the-sand, humdrum types who are content with leaving innovation to others. And they're always watching, waiting for the wrong move or misstep, so they can wag their finger, shake their head and say "I told you so." But you're not one of those types.</p>
+              <p>No, if you're reading this, you're the type who is always searching for the next big idea. You're the latest, greatest, new and improved. To you, thinking outside the box is the only way to think. You're the risk taker, trend setter, leader-of-the-pack who knows the future holds untold promise and potential. You understand that innovation makes the world go round, makes each new day better than the last. And when the innovator makes a wrong move or misstep, you're the first to offer support and, most importantly, a second chance. It's to you I offer my sincerest apologies.</p>
+              <p>Because I didn't look far enough. I didn't think big enough. When the sky was the limit, I should've reached for the stars. I focused on one thing and lost sight of the big picture. I tried to fix a part when we needed an entirely new foundation. I fought and created enemies when I knew in my heart that we were all in this together. For these failures and others, I am truly sorry. I never imagined that things could've turned out the way they did. That my hopes and dreams could've resulted in such an unfortunate twist of fate. But enough about the past, you're here for the future.</p>
+              <p>And the future is about second chances. It's about learning from our mistakes. It's about staying focused and never losing sight of the big picture. It's about proving wrong the naysayers, doubters and haters who are stuck in a morass of outmoded, outdated and worn-out ideas. And it's about honoring our commitment to the dreamers and believers who are dedicated to doing it better tomorrow than they did today. It's about redemption.</p>
+              <p>We won't let you down. I won't let you down. I won't stop until the Internet we dream of becomes a reality for every person from every corner of the planet. An Internet where free and open expression reign supreme. An Internet where no one is censored, cancelled or oppressed. An Internet where control is no longer in the hands of a few, but returned to the countless individuals who give meaning and substance to our global community. An Internet that gives power back to the people.</p>
+              <p>If you're still reading, I'm guessing we're a lot alike. We love and cherish freedom. We believe that together, we can create something better, a new web. A web where we are no longer held down by the powers that be. A web where innovation is praised and cherished. A web powered by us, for us. If this is what you've been searching for, then welcome home. This is our new beginning. This is our second chance. This is the dWeb.</p>
+              <p>Sincerely,<br>
+                Jared Rice, Sr.</p>
+                
+              
               <h3>The beginnings.</h3>
               <p>
                 Before the project was known as Peeps, it was another project promoted to millions of people around the world under the name "Arise Bank," which was originally bootstrapped by the efforts of Jared Rice Sr. and Stanley Ford. Rice's vision was to create a decentralized banking system around cryptocurrencies like Bitcoin where users of the system could be their own bank. He publicly denounced the Federal Reserve Bank for their hidden taxation of hard-working Americans through their printing of what he referred to as the "worthless" fiat-based U.S. Dollar. Little did he know however, that those at the Federal Reserve Bank, as well as its federal and state-based partner agencies - the Securities and Exchange Commission (SEC) and Texas Department of Banking, respectively - were conducting a campaign to frame Rice as a fraud. In any event, looking back at Rice's motivations at the the time, him knowing about the campaign would've done little to slow him down.
