--- a/blocks.html
+++ b/blocks.html
@@ -210,6 +210,17 @@
           <div class="dropdown-menu dropdown-menu-wide p-0 o-hidden dropdown-menu-right" aria-labelledby="components-dropdown">
             <div class="list-group list-group-flush">
               
+              <a href="our-mission.html" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center py-3">
+                <div class="d-flex align-items-center">
+                  <div class="icon-rounded mr-3" style="border: 1px solid #000;">
+                    <span>OM</span>
+                  </div>
+                  <div>
+                    <span class="h6 d-block mb-0">Our Mission</span>
+                  </div>
+                </div>
+                <i class="material-icons">keyboard_arrow_right</i>
+              </a>
               <a href="our-team.html" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center py-3">
                 <div class="d-flex align-items-center">
                   <div class="icon-rounded mr-3" style="border: 1px solid #000;">
