--- a/blocks.html
+++ b/blocks.html
@@ -186,10 +186,10 @@
               <a href="https://explorer.arisen.network " class="list-group-item list-group-item-action d-flex justify-content-between align-items-center py-3">
                 <div class="d-flex align-items-center">
                   <div class="icon-rounded mr-3" style="border: 1px solid #000;">
-                    <span>EN</span>
+                    <span>EA</span>
                   </div>
                   <div>
-                    <span class="h6 d-block mb-0">Explore Network</span>
+                    <span class="h6 d-block mb-0">Explore Arisen</span>
                   </div>
                 </div>
                 <i class="material-icons">keyboard_arrow_right</i>
@@ -235,7 +235,7 @@
               <a href="peeps-story.html" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center py-3">
                 <div class="d-flex align-items-center">
                   <div class="icon-rounded mr-3" style="border: 1px solid #000;">
-                    <span>OT</span>
+                    <span>PS</span>
                   </div>
                   <div>
                     <span class="h6 d-block mb-0">The Peeps Story</span>
@@ -397,26 +397,23 @@
           </div>
           <div class="col-12 col-md-2 mb-3 mb-md-0">
             <ul class="list-unstyled">
-              <li class="py-0 py-md-1"><a href="https://dwebx.org" class="text-gray">dWeb</a></li>
-              <li class="py-0 py-md-1"><a href="https://github.com/distributedweb/dwebfs-daemon" class="text-gray">dWebFS Daemon </a></li>
-              <li class="py-0 py-md-1"><a href="https://github.com/distributedweb/dweb-cli" class="text-gray">dWebCLI</a></li>
-              <li class="py-0 py-md-1"><a href="https://github.com/distributedweb/dweb-dns-discovery" class="text-gray">dDNS Discovery </a></li>
+              <li class="py-0 py-md-1"><a href="our-mission.html" class="text-gray">Our Mission </a></li>
+              <li class="py-0 py-md-1"><a href="our-team.html" class="text-gray">Our Team </a></li>
+              <li class="py-0 py-md-1"><a href="peeps-story.html" class="text-gray">The Peeps Story </a></li>
+              <li class="py-0 py-md-1"><a href="fund.html" class="text-gray">Support Peeps </a></li>
             </ul>
             <hr/>
             <ul class="list-unstyled">
-              <li class="py-0 py-md-1"><a href="https://dwebuniversity.com" class="text-gray">dWeb University </a></li>
+              <li class="py-0 py-md-1"><a href="https://arisen.network" class="text-gray">Developers </a></li>
             </ul>
           </div>
           <div class="col-12 col-md-3">
             <ul class="list-unstyled">
-              <li class="py-0 py-md-1"><a href="https://arisen.network" class="text-gray">Arisen Blockchain </a></li>
-              <li class="py-0 py-md-1"><a href="https://explorer.arisen.network" class="text-gray">Arisen Blockchain Explorer </a></li>
-              <li class="py-0 py-md-1"><a href="https://docs.arisen.network" class="text-gray">Arisen Documentation </a></li>
-              <li class="py-0 py-md-1"><a href="https://github.com/arisenio/arisen-java-sdk" class="text-gray">Arisen Java SDK </a></li>
-              <li class="py-0 py-md-1"><a href="https://github.com/arisenio/arisen-swift-sdk" class="text-gray">Arisen Swift SDK </a></li>
-              <li class="py-0 py-md-1"><a href="https://github.com/arisenio/arisenjs" class="text-gray">ArisenJS</a></li>
-              <li class="py-0 py-md-1"><a href="https://github.com/arisenio/arisen" class="text-gray">Arisen Core Code </a></li>
-              <li class="py-0 py-md-1"><a href="https://tools.arisen.network" class="text-gray">Arisen Tools </a></li>
+              <li class="py-0 py-md-1"><a href="https://dwebx.org" class="text-gray">dWeb </a></li>
+              <li class="py-0 py-md-1"><a href="https://dwebx.org/compare-webs.html" class="text-gray">Compare Webs </a></li>
+              <li class="py-0 py-md-1"><a href="https://dwebx.org/how-it-works.html" class="text-gray">How The dWeb Works </a></li>
+              <li class="py-0 py-md-1"><a href="#" class="text-gray">Arisen Java SDK </a></li>
+              <li class="py-0 py-md-1"><a href="https://signup.peepsid.com" class="text-gray">Create a PeepsID </a></li>
             </ul>
             <hr/>
             <ul class="list-unstyled">
