--- a/our-mission.html
+++ b/our-mission.html
@@ -189,10 +189,10 @@
               <a href="https://explorer.arisen.network " class="list-group-item list-group-item-action d-flex justify-content-between align-items-center py-3">
                 <div class="d-flex align-items-center">
                   <div class="icon-rounded mr-3" style="border: 1px solid #000;">
-                    <span>EN</span>
+                    <span>EA</span>
                   </div>
                   <div>
-                    <span class="h6 d-block mb-0">Explore Network</span>
+                    <span class="h6 d-block mb-0">Explore Arisen</span>
                   </div>
                 </div>
                 <i class="material-icons">keyboard_arrow_right</i>
@@ -238,7 +238,7 @@
               <a href="peeps-story.html" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center py-3">
                 <div class="d-flex align-items-center">
                   <div class="icon-rounded mr-3" style="border: 1px solid #000;">
-                    <span>OT</span>
+                    <span>PS</span>
                   </div>
                   <div>
                     <span class="h6 d-block mb-0">The Peeps Story</span>
@@ -461,84 +461,81 @@
 
     <!--------------------------- Footer Block Start-------------------->
     <footer class="spacer-y-3 bg-white">
-        <div class="container">
-          <div class="row">
-            <div class="col-6 col-md-5 mb-3 mb-md-0">
-              <img src="assets/img/logo/peepsLogo.png" alt="peeps-logo" class="footer-logo">
-              <!-- <p class="trademark">decentralize everything. &trade;</p> -->
-              <hr/>
-              <p>"My bias was always to build decentralization into the net. That way it would be hard for one group to gain control. I didn't trust large central organizations. It was just in my nature to distrust them."<br />
-                <b>- Bob Taylor</b><br />Visionary of ARPANET & Godfather Of The Internet</p>
-              <hr/>
-              <p class="powered-by">
-                Powered by <a href="https://peepsx.com" target="_blank"><img src="assets/img/logo/arisen.png" alt="peeps-logo"></a> and Made in <img src="assets/img/flag-us.svg" alt="United States" class="btn-image">
-              </p>
-              <p>&#xA9; 2020 Peeps. All rights reserved. The Peeps logo is copyright of Peeps and cannot be used without the written consent of Peeps.</p>
-  
-              <ul class="list-social-links">
-                <li class="text-gray"><a href="https://www.facebook.com/peepsology"><i class="socicon-facebook"></i></a></li>
-                <li class="text-gray"><a href="https://twitter.com/peepsology"><i class="socicon-twitter"></i></a></li>
-                <li class="text-gray"><a href="https://www.youtube.com/channel/UCoknUFNMUF9ciA_WGmm8pxQ"><i class="socicon-youtube"></i></a></li>
-                <li class="text-gray"><a href="https://medium.com/@peepsology"><i class="socicon-medium"></i></a></li>
-                <li class="text-gray"><a href="https://t.me/peepsology"><i class="socicon-telegram"></i></a></li>
-                <!-- <li class="text-gray"><a href="#"><i class="socicon-linkedin"></i></a></li>
-                <li class="text-gray"><a href="#"><i class="socicon-instagram"></i></a></li> -->
-              </ul>
-              
-            </div>
-            <div class="col-6 col-md-2 mb-3 mb-md-0">
-              <ul class="list-unstyled">
-                <li class="py-0 py-md-1"><a href="dwallet.html" class="text-gray">dWallet</a></li>
-                <li class="py-0 py-md-1"><a href="dsocial.html" class="text-gray">dSocial</a></li>
-                <li class="py-0 py-md-1"><a href="dnames.html" class="text-gray">dNames</a></li>
-                <li class="py-0 py-md-1"><a href="dsearch.html" class="text-gray">dSearch</a></li>
-              </ul>
-              <hr/>
-              <ul class="list-unstyled">
-                <li class="py-0 py-md-1"><a href="peepsid.html" class="text-gray">PeepsID</a></li>
-                <li class="py-0 py-md-1"><a href="peeros.html" class="text-gray">PeerOS</a></li>
-                <li class="py-0 py-md-1"><a href="dbrowser.html" class="text-gray">dBrowser</a></li>
-              </ul>
-  
-            </div>
-            <div class="col-12 col-md-2 mb-3 mb-md-0">
-              <ul class="list-unstyled">
-                <li class="py-0 py-md-1"><a href="https://dwebx.org" class="text-gray">dWeb</a></li>
-                <li class="py-0 py-md-1"><a href="https://github.com/distributedweb/dwebfs-daemon" class="text-gray">dWebFS Daemon </a></li>
-                <li class="py-0 py-md-1"><a href="https://github.com/distributedweb/dweb-cli" class="text-gray">dWebCLI</a></li>
-                <li class="py-0 py-md-1"><a href="https://github.com/distributedweb/dweb-dns-discovery" class="text-gray">dDNS Discovery </a></li>
-              </ul>
-              <hr/>
-              <ul class="list-unstyled">
-                <li class="py-0 py-md-1"><a href="https://dwebuniversity.com" class="text-gray">dWeb University </a></li>
-              </ul>
-            </div>
-            <div class="col-12 col-md-3">
-              <ul class="list-unstyled">
-                <li class="py-0 py-md-1"><a href="https://arisen.network" class="text-gray">Arisen Blockchain </a></li>
-                <li class="py-0 py-md-1"><a href="https://explorer.arisen.network" class="text-gray">Arisen Blockchain Explorer </a></li>
-                <li class="py-0 py-md-1"><a href="https://docs.arisen.network" class="text-gray">Arisen Documentation </a></li>
-                <li class="py-0 py-md-1"><a href="https://github.com/arisenio/arisen-java-sdk" class="text-gray">Arisen Java SDK </a></li>
-                <li class="py-0 py-md-1"><a href="https://github.com/arisenio/arisen-swift-sdk" class="text-gray">Arisen Swift SDK </a></li>
-                <li class="py-0 py-md-1"><a href="https://github.com/arisenio/arisenjs" class="text-gray">ArisenJS</a></li>
-                <li class="py-0 py-md-1"><a href="https://github.com/arisenio/arisen" class="text-gray">Arisen Core Code </a></li>
-                <li class="py-0 py-md-1"><a href="https://tools.arisen.network" class="text-gray">Arisen Tools </a></li>
-              </ul>
-              <hr/>
-              <ul class="list-unstyled">
-                <li class="py-0 py-md-1"><a href="https://npm.peepsx.com" class="text-gray">Peeps NPM </a></li>
-                <li class="py-0 py-md-1"><a href="https://github.peepsx.com" class="text-gray">Peeps Git Repository </a></li>
-              </ul>
-            </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-6 col-md-5 mb-3 mb-md-0">
+            <img src="assets/img/logo/peepsLogo.png" alt="peeps-logo" class="footer-logo">
+            <!-- <p class="trademark">decentralize everything. &trade;</p> -->
+            <hr/>
+            <p>"My bias was always to build decentralization into the net. That way it would be hard for one group to gain control. I didn't trust large central organizations. It was just in my nature to distrust them."<br />
+              <b>- Bob Taylor</b><br />Visionary of ARPANET & Godfather Of The Internet</p>
+            <hr/>
+            <p class="powered-by">
+              Powered by <a href="https://peepsx.com" target="_blank"><img src="assets/img/logo/arisen.png" alt="peeps-logo"></a> and Made in <img src="assets/img/flag-us.svg" alt="United States" class="btn-image">
+            </p>
+            <p>&#xA9; 2020 Peeps. All rights reserved. The Peeps logo is copyright of Peeps and cannot be used without the written consent of Peeps.</p>
+
+            <ul class="list-social-links">
+              <li class="text-gray"><a href="https://www.facebook.com/peepsology"><i class="socicon-facebook"></i></a></li>
+              <li class="text-gray"><a href="https://twitter.com/peepsology"><i class="socicon-twitter"></i></a></li>
+              <li class="text-gray"><a href="https://www.youtube.com/channel/UCoknUFNMUF9ciA_WGmm8pxQ"><i class="socicon-youtube"></i></a></li>
+              <li class="text-gray"><a href="https://medium.com/@peepsology"><i class="socicon-medium"></i></a></li>
+              <li class="text-gray"><a href="https://t.me/peepsology"><i class="socicon-telegram"></i></a></li>
+              <!-- <li class="text-gray"><a href="#"><i class="socicon-linkedin"></i></a></li>
+              <li class="text-gray"><a href="#"><i class="socicon-instagram"></i></a></li> -->
+            </ul>
+            
           </div>
-          <!-- <div class="row mt-3 mt-md-4">
-            <div class="col">
-              <span class="text-small text-gray opacity-50">&#xA9; 2018 Medium Rare ABN: 88 88888 88888 and Australian Credit License No 88888888</span>
-            </div>
-          </div> -->
+          <div class="col-6 col-md-2 mb-3 mb-md-0">
+            <ul class="list-unstyled">
+              <li class="py-0 py-md-1"><a href="dwallet.html" class="text-gray">dWallet</a></li>
+              <li class="py-0 py-md-1"><a href="dsocial.html" class="text-gray">dSocial</a></li>
+              <li class="py-0 py-md-1"><a href="dnames.html" class="text-gray">dNames</a></li>
+              <li class="py-0 py-md-1"><a href="dsearch.html" class="text-gray">dSearch</a></li>
+            </ul>
+            <hr/>
+            <ul class="list-unstyled">
+              <li class="py-0 py-md-1"><a href="peepsid.html" class="text-gray">PeepsID</a></li>
+              <li class="py-0 py-md-1"><a href="peeros.html" class="text-gray">PeerOS</a></li>
+              <li class="py-0 py-md-1"><a href="dbrowser.html" class="text-gray">dBrowser</a></li>
+            </ul>
+
+          </div>
+          <div class="col-12 col-md-2 mb-3 mb-md-0">
+            <ul class="list-unstyled">
+              <li class="py-0 py-md-1"><a href="our-mission.html" class="text-gray">Our Mission </a></li>
+              <li class="py-0 py-md-1"><a href="our-team.html" class="text-gray">Our Team </a></li>
+              <li class="py-0 py-md-1"><a href="peeps-story.html" class="text-gray">The Peeps Story </a></li>
+              <li class="py-0 py-md-1"><a href="fund.html" class="text-gray">Support Peeps </a></li>
+            </ul>
+            <hr/>
+            <ul class="list-unstyled">
+              <li class="py-0 py-md-1"><a href="https://arisen.network" class="text-gray">Developers </a></li>
+            </ul>
+          </div>
+          <div class="col-12 col-md-3">
+            <ul class="list-unstyled">
+              <li class="py-0 py-md-1"><a href="https://dwebx.org" class="text-gray">dWeb </a></li>
+              <li class="py-0 py-md-1"><a href="https://dwebx.org/compare-webs.html" class="text-gray">Compare Webs </a></li>
+              <li class="py-0 py-md-1"><a href="https://dwebx.org/how-it-works.html" class="text-gray">How The dWeb Works </a></li>
+              <li class="py-0 py-md-1"><a href="#" class="text-gray">Arisen Java SDK </a></li>
+              <li class="py-0 py-md-1"><a href="https://signup.peepsid.com" class="text-gray">Create a PeepsID </a></li>
+            </ul>
+            <hr/>
+            <ul class="list-unstyled">
+              <li class="py-0 py-md-1"><a href="https://npm.peepsx.com" class="text-gray">Peeps NPM </a></li>
+              <li class="py-0 py-md-1"><a href="https://github.peepsx.com" class="text-gray">Peeps Git Repository </a></li>
+            </ul>
+          </div>
         </div>
-      </footer>
-      <!--------------------------- Footer Block End-------------------->
+        <!-- <div class="row mt-3 mt-md-4">
+          <div class="col">
+            <span class="text-small text-gray opacity-50">&#xA9; 2018 Medium Rare ABN: 88 88888 88888 and Australian Credit License No 88888888</span>
+          </div>
+        </div> -->
+      </div>
+    </footer>
+    <!--------------------------- Footer Block End-------------------->
 
       <script type="text/javascript" src="assets/js/jquery.min.js"></script>
       <script type="text/javascript" src="assets/js/popper.min.js"></script>
