--- a/dsocial.html
+++ b/dsocial.html
@@ -188,10 +188,10 @@
               <a href="https://explorer.arisen.network " class="list-group-item list-group-item-action d-flex justify-content-between align-items-center py-3">
                 <div class="d-flex align-items-center">
                   <div class="icon-rounded mr-3" style="border: 1px solid #000;">
-                    <span>EN</span>
+                    <span>EA</span>
                   </div>
                   <div>
-                    <span class="h6 d-block mb-0">Explore Network</span>
+                    <span class="h6 d-block mb-0">Explore Arisen</span>
                   </div>
                 </div>
                 <i class="material-icons">keyboard_arrow_right</i>
@@ -237,7 +237,7 @@
               <a href="peeps-story.html" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center py-3">
                 <div class="d-flex align-items-center">
                   <div class="icon-rounded mr-3" style="border: 1px solid #000;">
-                    <span>OT</span>
+                    <span>PS</span>
                   </div>
                   <div>
                     <span class="h6 d-block mb-0">The Peeps Story</span>
@@ -340,7 +340,7 @@
         <div class="col-xl-8 col-lg-8 col-md-8 center-text">
             <div class="">
                 <h1 class="display-4">a social revolution is launching in...</h1>
-                <span class="h1" data-countdown-date="2020-11-01"></span>
+                <span class="h1" data-countdown-date="2021-01-01"></span>
                 <div class="text-center"><a href="https://signup.dsocial.network/welcome" class="btn btn-lg btn-white" style="border: 2px solid rgb(71, 116, 182);">Reserve Your Username Now</a></div>
               </div>
         </div>
@@ -432,26 +432,23 @@
           </div>
           <div class="col-12 col-md-2 mb-3 mb-md-0">
             <ul class="list-unstyled">
-              <li class="py-0 py-md-1"><a href="https://dwebx.org" class="text-gray">dWeb</a></li>
-              <li class="py-0 py-md-1"><a href="https://github.com/distributedweb/dwebfs-daemon" class="text-gray">dWebFS Daemon </a></li>
-              <li class="py-0 py-md-1"><a href="https://github.com/distributedweb/dweb-cli" class="text-gray">dWebCLI</a></li>
-              <li class="py-0 py-md-1"><a href="https://github.com/distributedweb/dweb-dns-discovery" class="text-gray">dDNS Discovery </a></li>
+              <li class="py-0 py-md-1"><a href="our-mission.html" class="text-gray">Our Mission </a></li>
+              <li class="py-0 py-md-1"><a href="our-team.html" class="text-gray">Our Team </a></li>
+              <li class="py-0 py-md-1"><a href="peeps-story.html" class="text-gray">The Peeps Story </a></li>
+              <li class="py-0 py-md-1"><a href="fund.html" class="text-gray">Support Peeps </a></li>
             </ul>
             <hr/>
             <ul class="list-unstyled">
-              <li class="py-0 py-md-1"><a href="https://dwebuniversity.com" class="text-gray">dWeb University </a></li>
+              <li class="py-0 py-md-1"><a href="https://arisen.network" class="text-gray">Developers </a></li>
             </ul>
           </div>
           <div class="col-12 col-md-3">
             <ul class="list-unstyled">
-              <li class="py-0 py-md-1"><a href="https://arisen.network" class="text-gray">Arisen Blockchain </a></li>
-              <li class="py-0 py-md-1"><a href="https://explorer.arisen.network" class="text-gray">Arisen Blockchain Explorer </a></li>
-              <li class="py-0 py-md-1"><a href="https://docs.arisen.network" class="text-gray">Arisen Documentation </a></li>
-              <li class="py-0 py-md-1"><a href="https://github.com/arisenio/arisen-java-sdk" class="text-gray">Arisen Java SDK </a></li>
-              <li class="py-0 py-md-1"><a href="https://github.com/arisenio/arisen-swift-sdk" class="text-gray">Arisen Swift SDK </a></li>
-              <li class="py-0 py-md-1"><a href="https://github.com/arisenio/arisenjs" class="text-gray">ArisenJS</a></li>
-              <li class="py-0 py-md-1"><a href="https://github.com/arisenio/arisen" class="text-gray">Arisen Core Code </a></li>
-              <li class="py-0 py-md-1"><a href="https://tools.arisen.network" class="text-gray">Arisen Tools </a></li>
+              <li class="py-0 py-md-1"><a href="https://dwebx.org" class="text-gray">dWeb </a></li>
+              <li class="py-0 py-md-1"><a href="https://dwebx.org/compare-webs.html" class="text-gray">Compare Webs </a></li>
+              <li class="py-0 py-md-1"><a href="https://dwebx.org/how-it-works.html" class="text-gray">How The dWeb Works </a></li>
+              <li class="py-0 py-md-1"><a href="#" class="text-gray">Arisen Java SDK </a></li>
+              <li class="py-0 py-md-1"><a href="https://signup.peepsid.com" class="text-gray">Create a PeepsID </a></li>
             </ul>
             <hr/>
             <ul class="list-unstyled">
