--- a/peeps-story.html
+++ b/peeps-story.html
@@ -271,7 +271,7 @@
             <div class="col-12 col-md-6">
               <h1 class="display-4 text-white">Our fight for freedom goes much further than the web.</h1>
               <p class="lead text-light">Peeps is the first tech startup launched from a prison and is doing more to empower people than any other tech company in the world.</p>
-              <a href="https://medium.com/peepsology/climbing-out-of-hell" class="btn btn-primary btn-lg">Read Our Story</a>
+              <a href="https://peepsology.medium.com/a-programmers-climb-out-of-hell-6190c3e5b977" class="btn btn-primary btn-lg">Read Our Story</a>
             </div>
           </div>
         </div>
