--- a/our-mission.html
+++ b/our-mission.html
@@ -306,7 +306,7 @@
             <div class="card">
               <div class="card-body py-4">
                 <span class="d-block h1 display-4">24</span>
-                <p>The amount of months Peeps Founder Jared Rice Sr. has served in Federal Prison.</p>
+                <p>The number of months Peeps Founder Jared Rice Sr. has served in Federal Prison.</p>
                 <!-- <a href="https://petition.peepsx.com">Sign The Petition</a> -->
               </div>
             </div>
