--- a/dnames.html
+++ b/dnames.html
@@ -474,8 +474,8 @@
             </ul>
             <hr/>
             <ul class="list-unstyled">
-              <li class="py-0 py-md-1"><a href="https://npm.peepsx.com" class="text-gray">Peeps NPM </a></li>
-              <li class="py-0 py-md-1"><a href="https://github.peepsx.com" class="text-gray">Peeps Git Repository </a></li>
+              <li class="py-0 py-md-1"><a href="https://www.npmjs.com/~peepslabs" class="text-gray">Peeps NPM </a></li>
+              <li class="py-0 py-md-1"><a href="https://github.com/peepsx" class="text-gray">Peeps Git Repository </a></li>
             </ul>
           </div>
         </div>
