--- a/dsearch.html
+++ b/dsearch.html
@@ -271,7 +271,7 @@
                     <img src="assets/img/logo/dseek.png" alt="dsearch">
                 </div>
                 <h1 class="display-4 text-white font-alt-1 text-center mt-2">Find Freedom.</h1>
-                <p class="description" style="color: #fff;">dSearch is a search engine that allows users to search the decentralized web inside and out, without sacrificing their privacy or their rights in the process. dSearch launches January 1st, 2021.</p>
+                <p class="description" style="color: #fff;">dSearch is a search engine that allows users to search the decentralized web inside and out, without sacrificing their privacy or their rights in the process. dSearch launches July 4th, 2021.</p>
                 <div class="text-center">
                     <a href="#search-the-dweb"><i class="material-icons d-block down-arrow arrow bounce" style="color: #fff;">keyboard_arrow_down</i></a>
                 </div>
