--- a/dnames.html
+++ b/dnames.html
@@ -271,7 +271,7 @@
                     <img src="assets/img/logo/dnames.png" alt="dname">
                 </div>
                 <h1 class="display-4 text-white font-alt-1 text-center mt-2">Decentralized Domains.</h1>
-                <p class="description" style="color:#fff;">dNames is the dWeb's first domain registrar for decentralized top-level domains (dTLDs) like .dcom, .dnet, .dorg, .dweb and more. dNames launches January 1st, 2021.</p>
+                <p class="description" style="color:#fff;">dNames is the dWeb's first domain registrar for decentralized top-level domains (dTLDs) like .dcom, .dnet, .dorg, .dweb and more. dNames launches January 15th, 2021.</p>
                 <div class="text-center">
                     <a href="#search" class="btn btn-lg btn-white">Take A Test Drive </a>
                     <a href="#search"><i class="material-icons d-block down-arrow arrow bounce">keyboard_arrow_down</i></a>
