--- a/our-mission.html
+++ b/our-mission.html
@@ -16,6 +16,15 @@
        
         <link href="assets/css/theme.css" rel="stylesheet" type="text/css" media="all">
         <link href="assets/css/custom.css" rel="stylesheet">
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-08BK2XMZTB"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-08BK2XMZTB');
+    </script>
         
       </head>
   <body>
@@ -407,7 +416,7 @@
             <p class="powered-by">
               Powered by <a href="https://peepsx.com" target="_blank"><img src="assets/img/logo/arisen.png" alt="peeps-logo"></a> and Made in <img src="assets/img/flag-us.svg" alt="United States" class="btn-image">
             </p>
-            <p>&#xA9; 2020 Peeps. All rights reserved. The Peeps logo is copyright of Peeps and cannot be used without the written consent of Peeps.</p>
+            <p>&#xA9; 2018-2021 Arisen Ministries and The Peeps Institute. All rights reserved.</p>
 
             <ul class="list-social-links">
               <li class="text-gray"><a href="https://www.facebook.com/peepsology"><i class="socicon-facebook"></i></a></li>
