--- a/blocks.html
+++ b/blocks.html
@@ -367,7 +367,7 @@
             <p class="powered-by">
               Powered by <a href="https://peepsx.com" target="_blank"><img src="assets/img/logo/arisen.png" alt="peeps-logo"></a> and Made in <img src="assets/img/flag-us.svg" alt="United States" class="btn-image">
             </p>
-            <p>&#xA9; 2020 Peeps. All rights reserved. The Peeps logo is copyright of Peeps and cannot be used without the written consent of Peeps.</p>
+            <p>&#xA9; 2018-2021 Arisen Ministries and The Peeps Institute. All rights reserved.</p>
 
             <ul class="list-social-links">
               <li class="text-gray"><a href="https://www.facebook.com/peepsology"><i class="socicon-facebook"></i></a></li>
