--- a/donate.html
+++ b/donate.html
@@ -20,6 +20,15 @@
   <link href="assets/css/custom.css" rel="stylesheet">
   <script src="https://js.stripe.com/v3/"></script>
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-08BK2XMZTB"></script>
+  <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-08BK2XMZTB');
+  </script>
 
 
 </head>
